chore: change deploy folder to app.g8cred.com

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -13,8 +13,8 @@ deployment:
     - /bin/mkdir -p "${DEPLOYPATH}/storage/framework/cache/data"
     - /bin/cp -R * $DEPLOYPATH
     - /bin/cp .env.production "${DEPLOYPATH}/.env"
-    - /bin/ln -sf "${DEPLOYPATH}/public" "${DEPLOY_ROOT}/public_html"
-    - /bin/ln -sf "${DEPLOYPATH}/storage/app/public" "${DEPLOY_ROOT}/public_html/storage"
+    - /bin/ln -sf "${DEPLOYPATH}/public" "${DEPLOY_ROOT}/app.g8cred.com"
+    - /bin/ln -sf "${DEPLOYPATH}/storage/app/public" "${DEPLOY_ROOT}/app.g8cred.com/storage"
     - /bin/chmod -R 777 "${DEPLOYPATH}/storage"
     - /bin/cd $DEPLOYPATH
     - /opt/cpanel/composer/bin/composer install --no-dev
