--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,11 +37,28 @@ services:
   # PHP (with Apache)
   # you can change from nginx to apache, just change session 'image'
   app:
-    image: ambientum/php:7.1-nginx
+    build: ./docker/
     container_name: multi-level-marketing-app
     volumes:
       - .:/var/www/app
+      - ./docker/php/conf.d/xdebug.ini:/etc/php7/conf.d/99-xdebug.ini
     ports:
       - "80:8080"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     links:
       - mysql
+    environment:
+      - PHP_IDE_CONFIG=serverName=mlm
+
+#  queue:
+#    build: ./docker/
+#    container_name: multi-level-marketing-queue
+#    volumes:
+#      - .:/var/www/app
+#    command:
+#      - php
+#      - artisan
+#      - queue:listen
+#    links:
+#      - mysql
